--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/c-v-pop/todolist#readme",
   "dependencies": {
     "tailwindcss": "^3.4.3"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
